--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@vercel/analytics": "^1.2.0",
     "next": "14.1.0",
+    "next-mdx-remote": "^4.4.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sugar-high": "^0.6.0"
   },
   "devDependencies": {
     "typescript": "^5",
