--- a/package.json
+++ b/package.json
@@ -3,28 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "rm -rf .next &&  NEXT_PRIVATE_LOCAL_WEBPACK=true next dev -p 3010",
+    "build": "NEXT_PRIVATE_LOCAL_WEBPACK=true next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@vercel/analytics": "^1.2.0",
-    "next": "14.1.0",
-    "next-mdx-remote": "^4.4.1",
+    "@module-federation/nextjs-mf": "^8.4.13",
+    "next": "14.2.7",
     "react": "^18",
-    "react-dom": "^18",
-    "sugar-high": "^0.6.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "eslint-config-next": "14.2.7",
+    "typescript": "^5"
   }
 }
