--- a/package.json
+++ b/package.json
@@ -1,25 +1,40 @@
 {
-  "name": "aminhp93",
-  "version": "0.1.0",
+  "name": "webpmp-v5-pv-items",
+  "version": "1.0.20",
   "private": true,
   "scripts": {
-    "dev": "rm -rf .next &&  NEXT_PRIVATE_LOCAL_WEBPACK=true next dev -p 3010",
-    "build": "NEXT_PRIVATE_LOCAL_WEBPACK=true next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "next dev -p 3002",
+    "build": "next build",
+    "export": "next export",
+    "start": "next start -p 3002",
+    "lint": "next lint",
+    "e2e": "start-server-and-test dev http://localhost:30025 \"cypress open --e2e\"",
+    "e2e:headless": "start-server-and-test dev http://localhost:30025 \"cypress run --e2e\"",
+    "component": "cypress open --component",
+    "component:headless": "cypress run --component",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
+    "test": "cypress run --component --spec ./@core/utils/hello.cy.tsx"
   },
   "dependencies": {
-    "@module-federation/nextjs-mf": "^8.4.13",
-    "next": "14.2.7",
+    "@module-federation/nextjs-mf": "^8.3.19",
+    "next": "13.3.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "webpack": "^5.89.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "@typescript-eslint/parser": "^6.13.2",
+    "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.7",
+    "eslint-config-next": "13.3.1",
     "typescript": "^5"
+  },
+  "resolutions": {
+    "string-width": "4.2.3"
   }
 }
