--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@module-federation/nextjs-mf": "^8.4.13",
+    "axios": "^1.7.7",
     "next": "14.2.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
